--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
   font-family: Avenir, sans-serif;
+  font-weight: bold;
+  margin: 2rem;
 }
+
 svg {
   border: 1px solid #bbb;
 }
@@ -11,4 +14,28 @@ svg {
 
 .x line {
   stroke: white;
+}
+
+h3 {
+  font-weight: 100;
+  color: #555;
+  margin: 0.4rem 0;
+}
+
+button {
+  outline: none;
+  color: #555;
+  border-color: #eee;
+  background: #fefefe;
+  padding: 3px 10px;
+  font-family: Avenir;
+  transition: all 200ms;
+}
+
+button:hover {
+  background: #f7f7f7;
+}
+
+button:focus {
+  background: #e7e7e7;
 }
